<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/app_margin"
    android:paddingTop="@dimen/app_margin"
    android:paddingRight="@dimen/app_margin">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_margin"
        android:text="@string/categories_label"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipWanted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wanted_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUnsolved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unsolved_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMissing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missing_label" />
    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>