<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/app_margin">

            <ImageView
                android:id="@+id/image"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_margin"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_image"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/aboutContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topic_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image">

                <TextView
                    android:id="@+id/tvAboutLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_label"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/btMore"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btMore"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_info"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/about_the_app"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btMore" />

                <TextView
                    android:id="@+id/tvSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/toronto_police_website"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAbout" />

                <TextView
                    android:id="@+id/tvSource2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toronto_mcsc_website"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSource" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/feedbackContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topic_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aboutContainer">

                <TextView
                    android:id="@+id/tvFeedbackLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_label"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/btRateUs"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btRateUs"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/feedback"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btRateUs" />

                <TextView
                    android:id="@+id/tvGithubLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/github_website"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvFeedback" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contactContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topic_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/feedbackContainer">

                <TextView
                    android:id="@+id/tvContactLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/contact_label"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/contact_message"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvContactLabel" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/vDividerVersion"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/item_margin"
                android:background="@color/colorGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contactContainer" />


            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/item_margin"
                android:gravity="center"
                android:text="@string/app_version"
                android:textSize="@dimen/text_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vDividerVersion" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>