<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/item_margin">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:text="@string/sample_text"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/ivNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin"
        android:maxLength="250"
        android:text="@string/lorem_ipsum"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toStartOf="@id/ivNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDate" />

    <ImageView
        android:id="@+id/ivNext"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/content_image"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorBlack" />

    <View
        android:id="@+id/dividerBottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/item_margin"
        android:background="@color/colorGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>


