<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_image"
                android:scaleType="center"
                android:src="@drawable/placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_max="600dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/imageBottom"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="@id/image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/infoContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/top_radius"
                android:padding="@dimen/app_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageBottom">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/app_margin"
                    android:text="@string/sample_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/sample_text"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvName" />

                <TextView
                    android:id="@+id/tvSinceLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/topic_margin"
                    android:text="@string/missing_since_label"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation" />

                <TextView
                    android:id="@+id/tvSince"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/topic_margin"
                    android:text="@string/sample_text"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvSinceLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvLocation" />

                <TextView
                    android:id="@+id/tvEthnicityLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/ethnicity_label"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSinceLabel" />

                <TextView
                    android:id="@+id/tvEthnicity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/sample_text"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvEthnicityLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvSinceLabel" />

                <TextView
                    android:id="@+id/tvAgeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/age_label"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEthnicityLabel" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/sample_text"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvAgeLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvEthnicity" />

                <TextView
                    android:id="@+id/tvGenderLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/gender_label"
                    android:textSize="@dimen/text_medium"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAgeLabel" />

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/sample_text"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvGenderLabel"
                    app:layout_constraintTop_toBottomOf="@id/tvAgeLabel" />

                <View
                    android:id="@+id/vDividerDetails"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/app_margin"
                    android:background="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvGenderLabel" />

                <TextView
                    android:id="@+id/tvDetailsLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/topic_margin"
                    android:text="@string/details_label"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vDividerDetails" />

                <TextView
                    android:id="@+id/tvDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/lorem_ipsum"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDetailsLabel" />

                <View
                    android:id="@+id/vDividerDescription"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/app_margin"
                    android:background="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.531"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDetails" />

                <TextView
                    android:id="@+id/tvDescriptionLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/topic_margin"
                    android:text="@string/description_label"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vDividerDescription" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/lorem_ipsum"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDescriptionLabel" />

                <View
                    android:id="@+id/vDividerHowToHelp"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/app_margin"
                    android:background="@color/colorGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDescription" />

                <TextView
                    android:id="@+id/tvHowToHelpLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/topic_margin"
                    android:text="@string/how_to_help_label"
                    android:textSize="@dimen/text_title"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/vDividerHowToHelp" />

                <TextView
                    android:id="@+id/tvHowToHelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/how_to_help_missing"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHowToHelpLabel" />

                <TextView
                    android:id="@+id/tvCrimeStoppers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_margin"
                    android:text="@string/how_to_help_missing_extra"
                    android:textSize="@dimen/text_medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvHowToHelp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>